tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpcmpeqb_ymm_ymm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:205:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %9) #22
            ^
0.02user 0.03system 0:00.12elapsed 40%CPU (0avgtext+0avgdata 27440maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
